--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,13 @@
+AddDefaultCharset UTF-8
 <IfModule mod_rewrite.c>
+
   Options +FollowSymLinks
   RewriteEngine On
 
 #RewriteRule ^category/([a-z0-9]+)/?$ index.php?cat=$1 [L]
-RewriteRule ^category/([a-zA-Zа-яА-ЯёЁ_0-9]+)/?$ index.php?cat=$1 [L]
+RewriteRule (*UTF8)^category/(.*+)/?$ index.php?cat=$1 [L]
+#RewriteRule (*UTF8)^category/(\p{L}+)/?$ index.php?cat=$1 [L]
+#RewriteRule ^category/([абвгдеёжзийклмнопрстуфхцчшщьыъэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЬЫЪЭЮЯa-zA-Z0-9]+)/?$ index.php?cat=$1 [L]
 #RewriteRule ^category/([a-zа-яё_\s]+)/?$ index.php?cat=$1 [L]
 
 </IfModule>
