--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@
   Options +FollowSymLinks
   RewriteEngine On
 
-RewriteRule ^category/([a-z0-9]+)/?$ home.php?id=$1 [L]
+RewriteRule ^category/([a-z0-9]+)/?$ index.php?id=$1 [L]
 
 </IfModule>
