--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,9 @@ AddDefaultCharset UTF-8
   RewriteEngine On
 
 
-RewriteRule (*UTF8)^category/(.*+)/?$ index.php?cat=$1 [L]
+RewriteRule (*UTF8)^category/(.*+)/?$ index.php?cat=$1 [L,QSA]
+RewriteRule (*UTF8)^category/(.*+)/(.*+)/?$ index.php?cat=$1&offset=$1 [L,QSA]
+
 RewriteRule (*UTF8)^noz/(.*+)/?$ index.php?noz=$1 [L]
 
 
